[package]
name = "secure-wipe-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
rand = "0.8"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aligned-vec = "0.6.4"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "errhandlingapi", "winioctl", "ioapiset", "sysinfoapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
